# pyinfra-xdcstore

./: .gitignore  README.md  deploy.py  pyproject.toml  setup.cfg  tox.ini
pyinfra_xdcstore/: __init__.py  setup-venv.sh  xstore-update.service  xstore-update.service.j2  xstore-update.sh  xstore.profile  xstore.service.j2
