[metadata]
name = pyinfra_xdcstore
version = 0.0.1
author = missytake
author_email = missytake@systemli.org
description = A pyinfra module for deploying xdcstore and xdcget.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deltachat/pyinfra-xdcstore
project_urls =
    Bug Tracker = https://github.com/deltachat/pyinfra-xdcstore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options]
package_dir =
    = pyinfra_xdcstore
packages = find:
python_requires = >=3.8
install_requires =
    pyinfra

[options.packages.find]
where = pyinfra_xdcstore

[tox:tox]
envlist = lint, py310
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
    flake8
commands =
    black --check --diff src tests
    flake8 src tests

[testenv]
deps =
    pytest
commands =
    pytest tests

[flake8]
max_line_length = 121
